acceptance test for no filter

--- a/app/views/movies/index.haml
+++ b/app/views/movies/index.haml
@@ -30,7 +30,7 @@
         |
         = link_to('I hated', filter: 'i_hated', by: @current_sort)
         |
-        = link_to('I\'m neutral', filter: 'i_neutral', by: @current_sort)
+        = link_to('No filter', filter: 'no_filter', by: @current_sort)
 
   .row
     .col-md-9
